--- a/index.html
+++ b/index.html
@@ -20,14 +20,65 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Brand New Group of Architects </h1>
-            <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio similique dolorem numquam dolor, animi distinctio perferendis esse, aliquam tenetur sapiente unde quasi libero saep!</p>
+            <p class="banner-description text-light-gray">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio similique dolorem numquam dolor, animi distinctio perferendis esse, aliquam tenetur sapiente unde quasi libero saep!</p>
             <button class="btn-primary">Explore More</button>
             </div>
             <img class="banner-image" src="images/banner.png" alt="">
         </div>
     </header>
     <main>
+        <section class="teams display-flex">
+            <div class="team-img-container">
+                <img src="images/team1.png"alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="our-features">
+                <h3 class="section-title"><span class="text-light-gray">Quick list <span class="text-gray">of Our</span> <span class="text-primary">Features</span></span></h3>
+                <p class="feature-description text-light-gray">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto odio placeat nihil animi reiciendis itaque, ullam neque commodi non. Maiores exercitationem cumque odit est veritatis.</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
 
+        <section>
+
+        </section>
+        
+        <section>
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts-container">
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">54</h4>
+                    <h5 class="fact-name">Awards Winnings</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                  <div>
+                    <img src="images/icons/projects.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">1458</h4>
+                    <h5 class="fact-name">Project Finished</h5>
+                  </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">590</h4>
+                    <h5 class="fact-name">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/email.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">22578</h4>
+                    <h5 class="fact-name">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
